<resources>
    <string name="app_name">Aula+</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aula_home">Aula+ (Home)</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="crea_un_aviso_para_que_se_muestre_aqu">Crea un aviso para que se muestre aquí</string>
    <string name="borrar_ltimo">Borrar último</string>
    <string name="a_adir_aviso">Añadir aviso</string>
    <string name="materia_di_si_dwes">Materia (DI, SI, DWES...)</string>
    <string name="t_tulo_del_aviso">Título del aviso</string>
    <string name="aula_login">Aula+ — Login</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="reg_strate">Regístrate</string>
    <string name="aula_registro">Aula+ — Registro</string>
    <string name="email1">Email</string>
    <string name="contrase_a1">Contraseña</string>
    <string name="repetir_contrase_a">Repetir contraseña</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="ya_tengo_cuenta">Ya tengo cuenta</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="tu_uid">Tu uid</string>
    <string name="dark_mode">🌙</string>
    <string name="your_profile">Your Profile</string>
    <string name="switch_dark_mode">Switch Dark Mode</string>
    <string name="uid_identificativo">uid Identificativo</string>
    <string name="bot_n_cerrar_sesi_n">Botón cerrar sesión</string>
</resources>